--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -36,7 +36,8 @@
     </div>
     <form action="#" id="send" method="post">
       <input type="text" name="message" id="message"/>
-      <input type="submit" name="submit" class="submit"/>
+      <!--<input type="submit" name="submit" class="submit"/>-->
+      <button class="submit"></button>
     </form>
     <div id="chats"></div>
   </div>
