tests passing and initial html set up

--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,34 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>chatterbox</title>
-    <link rel="stylesheet" href="styles/styles.css">
+<head>
+  <meta charset="utf-8">
+  <title>chatterbox</title>
+  <link rel="stylesheet" href="styles/styles.css">
 
-    <!-- dependencies -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
-    <!-- your scripts -->
-    <script src="env/config.js"></script>
-    <script src="scripts/app.js"></script>
-  </head>
-  <body>
-    <div id="main">
-      <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
-    </div>
-  </body>
+  <!-- dependencies -->
+  <script src="bower_components/jquery/jquery.min.js"></script>
+  <script src="bower_components/underscore/underscore-min.js"></script>
+  
+  <!-- scripts -->
+  <script src="env/config.js"></script>
+  <script src="scripts/app.js"></script>
+</head>
+<body>
+
+<div id="main">
+
+  <h1>chatterbox</h1>
+  
+  <div id="chats"></div><!-- /chats -->
+
+  <div id="send">
+    <form class="submit">
+      <textarea id="message" placeholder="type a message..."></textarea>
+      <input type="submit"></input>
+    </form>
+  </div><!-- /send -->
+
+</div><!-- /main -->
+
+</body>
 </html>
