--- a/client/index.html
+++ b/client/index.html
@@ -20,15 +20,13 @@
 
   <h1 class="title">chatter<span>box</span></h1>
 
-  <select name="" id="">
-    <option value="">-- Check a room below --</option>
-    <option value="">Room 1</option>
-    <option value="">Room 2</option>
-    <option value="">Room 3</option>
-  </select>
-
-  <div id="send">
+  <div id="send" class="send">
     <form class="submit">
+      <div class="select">
+        <select name="room-select" id="room-select">
+          <option value="">-- Choose below or create new room --</option>
+        </select>
+      </div>
       <textarea id="message" placeholder="type a message..."></textarea>
       <input type="submit"></input>
     </form>
